--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,17 @@ canvas {
 #statusBar .gamestats img {
 	margin:0 2px 0 2px;
 }
+.gamelogo img {
+	margin: 100px 0 0 250px ;
+	position: absolute;
+}
+
+.runningmario img {
+	margin: 70px 0 0 150px;
+	position: absolute;
+	width: 100px;
+}
+
 #statusBar .gamelevel {
 	float:left;
 	margin:2px 0 3px 10px;
